--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -34,9 +34,6 @@
   "No transactions to display": "Tidak ada transaksi untuk ditampilkan",
   "Invalid password": "Kata sandi salah",
   "Submit": "Kirim",
-  "TOTAL BALANCE": "JUMLAH SALDO",
-  "AVAILABLE": "TERSEDIA",
-  "LOCKED": "TERKUNCI",
   "Could not fetch data because the wallet is offline": "Tidak dapat mengambil data karena dompet luring",
   "Unknown wallet name": "Nama dompet tidak dikenal",
   "To remove this address from being the default address, you must set another one as default first.": "Untuk menghapus alamat ini dari alamat default, Anda harus menetapkan yang lain sebagai alamat default terlebih dahulu.",
@@ -66,7 +63,6 @@
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Catat kata-kata dengan hati-hati! Itu adalah frasa pemulihan rahasia dompet Anda.",
   "No recovery phrase was stored along with this wallet": "Tidak ada frase pemulihan yang disimpan bersama dompet ini",
   "Expected fee": "Biaya yang diharapkan",
-  "Address format is incorrect": "Format alamat salah",
   "Select the address to send funds from.": "Pilih alamat asal pengiriman dana.",
   "Recipient's address": "Alamat penerima",
   "Advanced settings": "Pengaturan lanjutan",
@@ -139,10 +135,6 @@
   "Receive": "Terima",
   "To": "Kepada",
   "Addresses": "Alamat-alamat",
-  "Generate new address": "Buat alamat baru",
-  "Advanced management": "Pengelolaan lanjutan",
-  "Show operations": "Tampilkan operasi",
-  "Hide operations": "Sembunyikan operasi",
   "Consolidate (merge) your UTXOs into one.": "Konsolidasikan (merge) UTXO Anda menjadi satu.",
   "Start": "Mulai",
   "Generate one address per group": "Hasilkan satu alamat per grup",
@@ -155,13 +147,9 @@
   "Refresh data": "Segarkan data",
   "Alephium Logo": " Logo Alephium",
   "Alephium": "Alephium",
-  "WALLET": "DOMPET",
-  "CURRENT WALLET": "DOMPET SAAT INI",
-  "MENU": "MENU",
   "Overview": "Ikhtisar",
   "Lock": "Kunci",
   "Enter password": "Ketikan kata sandi",
-  "Login": "Masuk",
   "Security Check": "Pemeriksaan Keamanan",
   "Alright! Time to check if you got your words right!": "Baiklah! Saatnya memeriksa apakah kata-kata Anda benar!",
   "Select the words in the right order. Ready?": "Pilih kata dengan urutan yang benar. Siap?",
@@ -197,24 +185,16 @@
   "Your Wallet": "Dompet Anda",
   "Your address": "Alamat Anda",
   "I've copied the words, continue": "Saya telah menyalin kata, lanjutkan",
-  "Advanced operations reserved to more experienced users. A \"normal\" user should not need to use them very often, if not at all.": "Operasi lanjutan dicadangkan untuk pengguna yang lebih berpengalaman. Pengguna \"normal\" seharusnya tidak terlalu sering menggunakannya, jika tidak sama sekali.",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Tampaknya dompet Anda memiliki terlalu banyak UTXO untuk dapat mengirim transaksi ini. Harap gabungkan (merge) UTXO Anda terlebih dahulu. Ini akan dikenakan sedikit biaya.",
-  "Welcome!": "Selamat Datang!",
-  "Welcome back!": "Selamat Datang Kembali!",
-  "Please choose a wallet and enter your password to continue.": "Silakan pilih dompet dan masukkan kata sandi Anda untuk melanjutkan.",
-  "Create / import a new wallet": "Buat / impor dompet baru",
   "(current)": "(current)",
   "Default address for sending transactions.": "Alamat default untuk mengirim transaksi.",
   "Error while fetching data for address {{ hash }}": "Kesalahan saat mengambil data untuk alamat {{ hash }}",
   "Error while fetching pending transactions for address {{ hash }}": "Kesalahan saat mengambil transaksi tertunda untuk alamat {{ hash }}",
   "Open in explorer": "Buka di penjelajah",
-  "Reduce": "Kurangi",
-  "Show addresses": "Tampilkan alamat",
   "More info": "Info lebih lanjut",
   "passphraseWarningMessage": "<0>Ini adalah fitur lanjutan!</0><br />Gunakan hanya jika Anda tahu apa yang Anda lakukan.<br />Silakan baca <5>dokumentasi</5> kami untuk mempelajarinya.",
   "welcomeScreenPassphraseMessage": "Jika Anda ingin menggunakan <1>frasa sandi</1>, kunci dompet yang baru Anda buat.",
   "I have read and understood the documentation": "Saya telah membaca dan memahami dokumentasi",
-  "Use optional passphrase (advanced)": "Gunakan frasa sandi opsional (lanjutan)",
   "Confirm passphrase": "Konfirmasi frasa sandi",
   "Passphrases don't match": "frasa sandi tidak cocok",
   "Language": "Bahasa",
@@ -244,17 +224,13 @@
   "Tokens to issue (optional)": "Token untuk diterbitkan (opsional)",
   "Gas": "Gas",
   "Review": "Ulasan",
-  "Invalid address group for the WallectConnect connection": "Grup alamat tidak valid untuk koneksi WallectConnect",
-  "Error in pairing": "Kesalahan dalam pairing",
   "WalletConnect error": "Kesalahan WalletConnect",
   "Try again": "Coba lagi",
   "Connect to a dApp": "Hubungkan ke dApp",
-  "Paste what was copied from the dApp": "Tempelkan apa yang telah disalin dari dApp",
   "Connect": "Hubungkan",
   "Approve the proposal to connect": "Setujui proposal untuk terhubung",
   "Please review the following before authorizing the dApp": "Harap tinjau yang berikut ini sebelum mengesahkan dApp",
   "Name": "Nama",
-  "URL": "URL",
   "Description": "Deskripsi",
   "Network ID": "ID Jaringan",
   "Address group": "Grup alamat",
@@ -276,5 +252,174 @@
   "Localhost": "Localhost",
   "Delete": "Hapus",
   "Timestamp": "Timestamp",
-  "Lock time must be in the future.": "Waktu penguncian harus di masa mendatang."
+  "Lock time must be in the future.": "Waktu penguncian harus di masa mendatang.",
+  "A contact with this address already exists": "A contact with this address already exists",
+  "A contact with this name already exists": "A contact with this name already exists",
+  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
+  "Add asset": "Add asset",
+  "Address NFTs": "Address NFTs",
+  "Address name": "Address name",
+  "Address tokens": "Address tokens",
+  "Address transactions": "Address transactions",
+  "Addresses & contacts": "Addresses & contacts",
+  "Advanced feature": "Advanced feature",
+  "Advanced operations": "Advanced operations",
+  "All selected": "All selected",
+  "All transactions loaded!": "All transactions loaded!",
+  "Analytics": "Analytics",
+  "Anyone with your private keys can steal any assets held in your addresses.": "Anyone with your private keys can steal any assets held in your addresses.",
+  "Asset": "Asset",
+  "Assets": "Assets",
+  "Browse your transaction history. Execute new transfers easily.": "Browse your transaction history. Execute new transfers easily.",
+  "Bytecode": "Bytecode",
+  "Change wallet name": "Change wallet name",
+  "Choose a contact": "Choose a contact",
+  "Click on an address to copy its private key.": "Click on an address to copy its private key.",
+  "Coming soon!": "Coming soon!",
+  "Confirm": "Confirm",
+  "Confirm lock time": "Confirm lock time",
+  "Connect to dApp": "Connect to dApp",
+  "Connect wallet to dApp": "Connect wallet to dApp",
+  "Contact saved": "Contact saved",
+  "Contacts": "Contacts",
+  "Copy contact address": "Copy contact address",
+  "Copy private key": "Copy private key",
+  "Copy to clipboard failed": "Copy to clipboard failed",
+  "Copy token hash": "Copy token hash",
+  "Could not copy private key.": "Could not copy private key.",
+  "Could not find a contact with this ID": "Could not find a contact with this ID",
+  "Could not find a contact with this name": "Could not find a contact with this name",
+  "Could not pair with WalletConnect": "Could not pair with WalletConnect",
+  "Could not save contact.": "Could not save contact.",
+  "Could not save new wallet name.": "Could not save new wallet name.",
+  "Create contacts to avoid mistakes when sending transactions!": "Create contacts to avoid mistakes when sending transactions!",
+  "Current dApp connection details": "Current dApp connection details",
+  "Developer tools": "Developer tools",
+  "Direction": "Direction",
+  "Directions": "Directions",
+  "Disconnect": "Disconnect",
+  "Discover active addresses": "Discover active addresses",
+  "Easily organize your addresses and your contacts for a more serene transfer experience.": "Easily organize your addresses and your contacts for a more serene transfer experience.",
+  "Edit": "Edit",
+  "Edit contact": "Edit contact",
+  "Enable developer tools": "Enable developer tools",
+  "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
+  "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
+  "Enter your password to copy the private key.": "Enter your password to copy the private key.",
+  "Expand": "Expand",
+  "Export": "Export",
+  "Export address transactions": "Export address transactions",
+  "Export current wallet": "Export current wallet",
+  "Export wallet": "Export wallet",
+  "Features for developers only": "Features for developers only",
+  "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.": "Gas amount must be greater than {{ MINIMAL_GAS_AMOUNT }}.",
+  "Gas price must be greater than {{ amount }}": "Gas price must be greater than {{ amount }}",
+  "Good afternoon.": "Good afternoon.",
+  "Good evening.": "Good evening.",
+  "Good morning.": "Good morning.",
+  "Good night.": "Good night.",
+  "Help us improve your experience!": "Help us improve your experience!",
+  "Hide empty": "Hide empty",
+  "Import or create a wallet": "Import or create a wallet",
+  "Info": "Info",
+  "Last 12 months": "Last 12 months",
+  "Last 24h": "Last 24h",
+  "Last 6 months": "Last 6 months",
+  "Last activity": "Last activity",
+  "Last month": "Last month",
+  "Last week": "Last week",
+  "Latest transactions": "Latest transactions",
+  "Lock wallet": "Lock wallet",
+  "Locked": "Locked",
+  "More options": "More options",
+  "NFTs": "NFTs",
+  "Never disclose this key.": "Never disclose this key.",
+  "Never used": "Never used",
+  "New contact": "New contact",
+  "No contacts found. You can create contacts in the Addresses page.": "No contacts found. You can create contacts in the Addresses page.",
+  "No options match the search criteria.": "No options match the search criteria.",
+  "Open the advanced feature panel.": "Open the advanced feature panel.",
+  "Paste WalletConnect URI copied from the dApp": "Paste WalletConnect URI copied from the dApp",
+  "Period": "Period",
+  "Please, backup your secret phrase instead.": "Please, backup your secret phrase instead.",
+  "Previous year": "Previous year",
+  "Private key copied!": "Private key copied!",
+  "Private key export": "Private key export",
+  "Raw amount": "Raw amount",
+  "Reset filters": "Reset filters",
+  "Restart": "Restart",
+  "Scan the blockchain for addresses you used in the past.": "Scan the blockchain for addresses you used in the past.",
+  "Scan this QR code with your mobile wallet.": "Scan this QR code with your mobile wallet.",
+  "Search": "Search",
+  "Search for label, a hash or an asset...": "Search for label, a hash or an asset...",
+  "Search for name or a hash...": "Search for name or a hash...",
+  "See more": "See more",
+  "Select a period": "Select a period",
+  "Select address group": "Select address group",
+  "Select addresses": "Select addresses",
+  "Select all": "Select all",
+  "Select an asset": "Select an asset",
+  "Select assets": "Select assets",
+  "Select directions": "Select directions",
+  "Select the address to receive funds to.": "Select the address to receive funds to.",
+  "Send locked assets": "Send locked assets",
+  "Set as the default address": "Set as the default address",
+  "Set custom network URLs": "Set custom network URLs",
+  "Set gas and lock time": "Set gas and lock time",
+  "Set gas settings": "Set gas settings",
+  "Shortcuts": "Shortcuts",
+  "Show QR code": "Show QR code",
+  "Show advanced operations": "Show advanced operations",
+  "Smart contract": "Smart contract",
+  "Smart contracts": "Smart contracts",
+  "Swapped": "Swapped",
+  "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
+  "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})",
+  "This address is not valid": "This address is not valid",
+  "This asset cannot have more than {{ decimals }} decimals": "This asset cannot have more than {{ decimals }} decimals",
+  "This field is required": "This field is required",
+  "This is a feature for developers only.": "This is a feature for developers only.",
+  "This is the default address": "This is the default address",
+  "This year": "This year",
+  "Time period": "Time period",
+  "Tokens": "Tokens",
+  "Too many chains in the WalletConnect proposal, expected 1, got {{ num }}": "Too many chains in the WalletConnect proposal, expected 1, got {{ num }}",
+  "Transfers": "Transfers",
+  "Type your password to export your wallet.": "Type your password to export your wallet.",
+  "Unknown token": "Unknown token",
+  "Unknown tokens": "Unknown tokens",
+  "Unlock": "Unlock",
+  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
+  "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Unlock your wallet to connect to dApp: {{ dAppName }}": "Unlock your wallet to connect to dApp: {{ dAppName }}",
+  "Unlock your wallet to continue.": "Unlock your wallet to continue.",
+  "Unselect all": "Unselect all",
+  "Use optional passphrase": "Use optional passphrase",
+  "Value today": "Value today",
+  "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.": "Version {{ newVersion }} is available. Please, download it and install it to avoid any issues with wallet.",
+  "Wallet name updated to: {{ newWalletName }}": "Wallet name updated to: {{ newWalletName }}",
+  "Want to know more? Click here to take a look at our FAQ!": "Want to know more? Click here to take a look at our FAQ!",
+  "Welcome back.": "Welcome back.",
+  "Welcome.": "Welcome.",
+  "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
+  "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
+  "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!",
+  "You will not be able to recover your account with the private key!": "You will not be able to recover your account with the private key!",
+  "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
+  "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
+  "Your addresses": "Your addresses",
+  "and": "and",
+  "between": "between",
+  "lockTimeConfirmation": "You chose to lock the assets until <1>{{ datetime }}</1>. That is approximately <3>{{ inTimeFromNow }}</3> from now. Are you sure you want to lock the assets until then?",
+  "with": "with",
+  "{{ number }} selected": "{{ number }} selected",
+  "Contact deleted": "Contact deleted",
+  "Could not delete contact.": "Could not delete contact.",
+  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Are you sure you want to remove \"{{ contactName }}\" from your contact list?",
+  "There are no addresses in the required group: {{ group }}": "There are no addresses in the required group: {{ group }}",
+  "There are no available addresses.": "There are no available addresses.",
+  "Please, generate a new address in group {{ group }} first.": "Please, generate a new address in group {{ group }} first.",
+  "System": "System",
+  "Light": "Light",
+  "Dark": "Dark"
 }
