Missing FR translation

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -5,9 +5,9 @@
   "ALPH amount": "Montant en ALPH",
   "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
   "Activate dark mode": "Activer le mode sombre",
-  "Add asset": "Add asset",
+  "Add asset": "Ajouter un actif",
   "Address": "Adresse",
-  "Address NFTs": "Address NFTs",
+  "Address NFTs": "NFTs de l'adresse",
   "Address copied to clipboard!": "L'adresse a été copiée dans le presse papiers !",
   "Address details": "Détails de l'adresse",
   "Address group": "Groupe de l’adresse",
