Add fiat currency option in the settings

--- a/locales/bg-BG/translation.json
+++ b/locales/bg-BG/translation.json
@@ -52,11 +52,13 @@
   "Call contract": "Призови договор",
   "Cancel": "Отмяна",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Внимателно запишете думите! Те са тайната фраза за възстановяване на портфейла ви.",
-  "Change the wallet language": "Промяна на езика на портфейла",
+  "Change the currency to use to display amounts.": "Change the currency to use to display amounts.",
+  "Change the wallet language.": "Change the wallet language.",
   "Change wallet name": "Change wallet name",
   "Check": "Провери",
   "Choose a contact": "Choose a contact",
   "Click on an address to copy its private key.": "Click on an address to copy its private key.",
+  "Click to deactivate discreet mode": "Click to deactivate discreet mode",
   "Click to see less": "Кликнете, за да видите по-малко",
   "Click to see more": "Кликнете, за да видите повече",
   "Close": "Затвори",
@@ -95,6 +97,7 @@
   "Could not save contact.": "Could not save contact.",
   "Could not save new wallet name.": "Could not save new wallet name.",
   "Create contacts to avoid mistakes when sending transactions!": "Create contacts to avoid mistakes when sending transactions!",
+  "Currency": "Currency",
   "Current dApp connection details": "Current dApp connection details",
   "Current network": "Текуща мрежа",
   "Current wallet": "Текущ портфейл",
@@ -421,6 +424,5 @@
   "Your addresses": "Your addresses",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "Вашият портфейл",
-  "Click to deactivate discreet mode": "Click to deactivate discreet mode"
+  "Your Wallet": "Вашият портфейл"
 }
