--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -52,11 +52,13 @@
   "Call contract": "Sözleşmeyi çağır",
   "Cancel": "İptal",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Sözcükleri önemle not ediniz! Cüzdanınızın gizli kurtarma sözcükleridir.",
-  "Change the wallet language": "Cüzdan dilini değiştirin",
+  "Change the currency to use to display amounts.": "Change the currency to use to display amounts.",
+  "Change the wallet language.": "Change the wallet language.",
   "Change wallet name": "Change wallet name",
   "Check": "Kontrol et",
   "Choose a contact": "Choose a contact",
   "Click on an address to copy its private key.": "Click on an address to copy its private key.",
+  "Click to deactivate discreet mode": "Click to deactivate discreet mode",
   "Click to see less": "Daha az görmek için tıklayın",
   "Click to see more": "Daha fazla görmek için tıklayın",
   "Close": "Kapat",
@@ -95,6 +97,7 @@
   "Could not save contact.": "Could not save contact.",
   "Could not save new wallet name.": "Could not save new wallet name.",
   "Create contacts to avoid mistakes when sending transactions!": "Create contacts to avoid mistakes when sending transactions!",
+  "Currency": "Currency",
   "Current dApp connection details": "Current dApp connection details",
   "Current network": "Şu anki ağ",
   "Current wallet": "Şu anki cüzdan",
@@ -421,6 +424,5 @@
   "Your addresses": "Your addresses",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "Cüzdanınız",
-  "Click to deactivate discreet mode": "Click to deactivate discreet mode"
+  "Your Wallet": "Cüzdanınız"
 }
