--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -1,18 +1,18 @@
 {
   "(current)": "(actif)",
+  "{{ amount }} words entered": "{{ amount }} mots inscrits",
+  "{{ number }} selected": "{{ number }} sélectionnés",
   "A contact with this address already exists": "Un contact associé à cette adresse existe déjà",
   "A contact with this name already exists": "Un contact avec ce nom existe déjà",
-  "ALPH amount": "Montant en ALPH",
-  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
   "Activate dark mode": "Activer le mode sombre",
   "Add asset": "Ajouter un actif",
   "Address": "Adresse",
-  "Address NFTs": "NFTs de l'adresse",
   "Address copied to clipboard!": "L'adresse a été copiée dans le presse papiers !",
   "Address details": "Détails de l'adresse",
   "Address group": "Groupe de l’adresse",
   "Address label": "Label de l'adresse",
   "Address name": "Nom de l'adresse",
+  "Address NFTs": "NFTs de l'adresse",
   "Address options": "Paramètres de l'adresse",
   "Address tokens": "Jetons de l'adresse",
   "Address transactions": "Transactions de l'adresse",
@@ -23,27 +23,32 @@
   "Advanced options": "Paramètres avancés",
   "Advanced settings": "Paramètres avancés",
   "Alephium": "Alephium",
-  "Alephium Logo": "Logo Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium n'a pas accès à votre portefeuille.\nVous êtes le seul propriétaire.",
+  "Alephium Logo": "Logo Alephium",
+  "all": "tous",
   "All good? Let's continue!": "Tout bon ? Continuons !",
   "All selected": "Tous",
   "All transactions loaded!": "Toutes les transactions ont été chargées !",
+  "ALPH amount": "Montant en ALPH",
+  "ALPH price: {{ price }}$": "ALPH price: {{ price }}$",
   "Alright! Time to check if you got your words right!": "Ok ! Il est temps de vérifier que vos mots sont corrects !",
   "Amount": "Montant",
   "Amount exceeds available balance": "Le montant est supérieur au fonds disponible",
   "Amount must be greater than {{ minAmountInAlph }}": "Le montant doit être supérieur à {{ minAmountInAlph }}",
   "Analytics": "Données d'usage",
+  "and": "et",
   "Anyone with your private keys can steal any assets held in your addresses.": "Une personne en possession de vos clés privées peut voler les actifs contenus dans vos adresses.",
   "Approve": "Approuver",
   "Approve the proposal to connect": "Approuvez la proposition de connexion",
+  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Etes-vous sur de vouloir effacer \"{{ contactName }}\" de votre liste de contacts?",
   "Asset": "Actif",
   "Assets": "Actifs",
   "Available": "Disponible",
   "Back": "Retour",
+  "between": "entre",
   "Browse your transaction history. Execute new transfers easily.": "Parcourez votre historique de transaction. Exécutez des transfers facilement.",
   "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Par défaut, l'adresse est générée dans un groupe aléatoire. Vous pouvez sélectionner le groupe de votre choix dans les paramètres avancés.",
   "Bytecode": "Bytecode",
-  "CONFIRM REMOVAL": "CONFIRMER LA SUPPRESSION",
   "Call contract": "Appeler un contrat",
   "Cancel": "Annuler",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Gardez ces mots précieusement ! Ils sont la clé pour accéder et récupérer votre portefeuille.",
@@ -59,6 +64,7 @@
   "Confirm": "Confirmer",
   "Confirm lock time": "Confirmer la durée de verrouillage",
   "Confirm passphrase": "Confirmer la phrase de passe",
+  "CONFIRM REMOVAL": "CONFIRMER LA SUPPRESSION",
   "Confirmed": "Confirmé",
   "Connect": "Se connecter",
   "Connect to a dApp": "Se connecter à une dApp",
@@ -67,6 +73,7 @@
   "Consolidate": "Consolider",
   "Consolidate (merge) your UTXOs into one.": "Consolider (fusionner) vos UTXOs en un.",
   "Consolidate UTXOs": "Consolider les UTXOs",
+  "Contact deleted": "Contact effacé",
   "Contact saved": "Contact sauvegardé",
   "Contacts": "Contacts",
   "Continue": "Continuer",
@@ -80,6 +87,7 @@
   "Copy token hash": "Copier le hash du jeton",
   "Could not connect to the {{ currentNetwork }} network.": "Impossible de se connecter au réseau {{ currentNetwork }}.",
   "Could not copy private key.": "Impossible de copier la clé privée.",
+  "Could not delete contact.": "Impossible d'effacer le contact.",
   "Could not fetch data because the wallet is offline": "Impossible de récupérer les données car le portefeuille est hors ligne.",
   "Could not find a contact with this ID": "Pas de contact avec cet ID",
   "Could not find a contact with this name": "Pas de contact avec ce nom",
@@ -92,6 +100,7 @@
   "Current wallet": "Portefeuille actif",
   "Custom": "Personnalisé",
   "Custom network settings saved.": "Paramètres de réseau enregistrés.",
+  "Dark": "Sombre",
   "Default address": "Adresse par défaut",
   "Default address for sending transactions.": "Adresse par défaut pour effectuer des transactions.",
   "Delete": "Supprimer",
@@ -138,6 +147,7 @@
   "Fee": "Frais",
   "For mining or DeFi use.": "Pour le minage our l'usage DeFi.",
   "From": "De",
+  "from": "depuis",
   "From address": "Adresse d'origine",
   "Gas": "Gaz",
   "Gas amount": "Quantité de gaz",
@@ -161,9 +171,11 @@
   "I've copied the words, continue": "J'ai copié les mots, continuons",
   "Import or create a wallet": "Importer ou créer un portefeuille",
   "Import wallet": "Importer un portefeuille",
+  "in": "dans",
   "Info": "Info",
   "Inputs": "Entrants",
   "Insecure password": "Le mot de passe n'est pas sûr",
+  "into": "dans",
   "Invalid password": "Mot de passe invalide",
   "Issue token amount": "Nombre de jetons à créer",
   "It appears that your wallet has too many UTXOs to be able to send this transaction. Please, consolidate (merge) your UTXOs first. This will cost a small fee.": "Il semblerait que votre wallet ait trop de UTXOs pour pouvoir envoyer cette transaction. Il vous faut d'abord consolider (fusionner) vos UTXOs (des frais s'appliquent).",
@@ -179,6 +191,7 @@
   "Last week": "Semaine dernière",
   "Latest transactions": "Dernières transactions",
   "Let's go!": "C'est parti !",
+  "Light": "Clair",
   "Localhost": "Localhost",
   "Lock": "Verrouiller",
   "Lock current wallet": "Verrouiller ce portefeuille",
@@ -187,6 +200,7 @@
   "Lock wallet": "Verrouiller",
   "Locked": "Verrouillé",
   "Locked ALPH balance": "Montant verrouillé en ALPH",
+  "lockTimeConfirmation": "Vous avez choisi de verrouiller les actifs jusqu'à <1>{{ datetime }}</1>. C'est approximativement dans <3>{{ inTimeFromNow }}</3>. Êtes-vous certain de vouloir verrouiller les actifs jusque là ?",
   "Mainnet": "Mainnet",
   "Make sure to always check what is the selected network before sending transactions.": "Assurez-vous de bien vérifier le réseau sélectionné avant d'effectuer des transactions.",
   "Make sure to keep your password secured as it cannot be changed in the future.": "Assurez-vous de garder votre mot de passe en sécurité, car il ne peut pas être changé par la suite.",
@@ -198,7 +212,6 @@
   "More options": "Plus d'options",
   "More to come...": "Plus à venir...",
   "Moved": "Transféré",
-  "NFTs": "NFTs",
   "Name": "Nom",
   "Network": "Réseau",
   "Network ID": "ID du réseau",
@@ -211,6 +224,7 @@
   "New version": "Nouvelle version",
   "New wallet": "Nouveau portefeuille",
   "New wallet name": "Nouveau nom de portefeuille",
+  "NFTs": "NFTs",
   "No contacts found. You can create contacts in the Addresses page.": "Aucun de contact trouvé. Vous pouvez créer des contacts dans le menu Adresse.",
   "No options match the search criteria.": "Aucune option ne correspond à ces critères.",
   "No recovery phrase was stored along with this wallet": "Aucune phrase de récupération n'a été enregistrée avec ce portefeuille",
@@ -224,9 +238,11 @@
   "Open in explorer": "Ouvrir dans l'explorer",
   "Open the advanced feature panel.": "Ouvrir le panneau des fonctionnalités avancées.",
   "Optional passphrase": "Phrase de passe optionnelle",
+  "out from": "depuis",
   "Outputs": "Sortants",
   "Overview": "Vue d'ensemble",
   "Passphrases don't match": "Les phrases de passe ne sont pas identiques",
+  "passphraseWarningMessage": "<0>Ceci est une fonctionnalité avancée !</0><br />Utilisez la seulement si vous savez ce que vous faites.<br />Lisez notre <5>documentation</5> pour en apprendre plus.",
   "Password": "Mot de passe",
   "Password Check": "Vérification du mot de passe",
   "Password is too weak": "Votre mot de passe est trop faible",
@@ -240,6 +256,7 @@
   "Please make sure to have your recovery phrase saved and stored somewhere secure to restore your wallet in the future. Without the recovery phrase, your wallet will be unrecoverable and permanently lost.": "Assurez-vous de garder votre phrase de récupération en lieu sûr pour pouvoir restorer votre portefeuille dans le futur. Sans la phrase, votre portefeuille sera perdu pour toujours.",
   "Please review the following before authorizing the dApp": "Passez en revue les paramètres suivants avant d’autoriser la dApp",
   "Please, backup your secret phrase instead.": "Copiez votre phrase secrete à la place s'il vous plaît.",
+  "Please, generate a new address in group {{ group }} first.": "Merci de générer une nouvelle adresse dans le group {{ group }} d'abord.",
   "Previous year": "Année précédente",
   "Private key copied!": "Clé privée copiée !",
   "Private key export": "Export de clé privée",
@@ -297,11 +314,11 @@
   "Settings": "Paramètres",
   "Shortcuts": "Raccourcis",
   "Show": "Afficher",
-  "Show QR code": "Montrer le code QR",
   "Show advanced operations": "Montrer les opérations avancées",
   "Show advanced options": "Afficher les options avancées",
   "Show in explorer": "Montrer dans l'explorer",
   "Show more": "Montrer plus",
+  "Show QR code": "Montrer le code QR",
   "Show your secret recovery phrase": "Montrer votre phrase de récupération",
   "Signer address": "Adresse de signature",
   "Smart contract": "Contrat intelligent (smart contract)",
@@ -314,6 +331,8 @@
   "Sweep": "Nettoyer",
   "Sweep address": "Nettoyer l'adresse",
   "Sweep all the unlocked funds of this address to another address.": "Déplacer l'ensemble des fonds de cette adresse vers une autre adresse.",
+  "sweepOperationFromTo": "Cette opération va envoyer tous les fonds de <1>{{ from }}</1> vers <3>{{ to }}</3>.",
+  "System": "Système",
   "Tab navigation": "Navigation par tab",
   "Tell us!": "Dites-nous!",
   "Testnet": "Testnet",
@@ -324,7 +343,9 @@
   "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "Le groupe de l'adresse sélectionnée ({{ addressGroup }}) ne correspond pas au groupe requis par WalletConnect ({{ walletConnectGroup }})",
   "The wallet is offline.": "Le portefeuille est hors ligne.",
   "Theme": "Thème",
+  "There are no addresses in the required group: {{ group }}": "Il n'y a pas d'adresses dans le groupe requis: {{ group }}",
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "Aucune adresse avec des fonds. Envoyez s'il vous plaît des fonds sur une de vos adresse puis recommencer.",
+  "There are no available addresses.": "Il n'y a pas d'adresse disponible.",
   "This address is not valid": "Cette adresse n'est pas valide",
   "This asset cannot have more than {{ decimals }} decimals": "Cet actif ne peut pas avoir plus de {{ decimals }} décimales",
   "This field is required": "Ce champs est requis",
@@ -334,6 +355,7 @@
   "Time period": "Période de temps",
   "Timestamp": "Date",
   "To": "À",
+  "to": "vers",
   "To address": "Adresse de destination",
   "To remove this address from being the default address, you must set another one as default first.": "Afin de ne plus faire de cette adresse l'adresse par défaut, merci d'en choisir une autre à la place.",
   "Toggle discreet mode (hide amounts).": "Enclencher le mode discret (cache les montants).",
@@ -387,39 +409,17 @@
   "Welcome back.": "De retour.",
   "Welcome to Alephium.": "Bienvenue chez Alephium.",
   "Welcome.": "Bienvenue.",
+  "welcomeScreenOneAddressPerGroupMessage": "Utilisateur avancé : vous voulez commencer avec <1>une adresse par groupe pour le minage ou la DeFi?</1>",
+  "welcomeScreenPassphraseMessage": "Si vous désirez utiliser une <1>phrase de passe</1>, verrouillez votre portefeuille fraîchement créé.",
+  "with": "avec",
   "You can disable this confirmation step from the wallet settings.": "Vous pouvez désactiver cette étape de confirmation dans les paramètres du portefeuille.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "Vous pouvez télécharger l'historique des transactions pour cette adresse sur une période de temps donnée. Cela peut être utile pour vos impôts.",
   "You have great ideas you want to share?": "Vous avez de supers idées à partager ?",
   "You have questions about transfers ? Click here!": "Des questions à propos des transfers ? Cliquez ici.",
   "You will not be able to recover your account with the private key!": "Vous ne serez pas en mesure de récupérer votre portefeuille avec la clé privée !",
-  "Your CSV file has been generated successfully.": "Votre fichier CSV a été généré correctement.",
-  "Your CSV file is being compiled in the background.": "Votre fichier CSV est en cours de création.",
-  "Your Wallet": "Votre portefeuille",
   "Your address": "Votre adresse",
   "Your addresses": "Vos adresses",
-  "all": "tous",
-  "and": "et",
-  "between": "entre",
-  "from": "depuis",
-  "in": "dans",
-  "into": "dans",
-  "lockTimeConfirmation": "Vous avez choisi de verrouiller les actifs jusqu'à <1>{{ datetime }}</1>. C'est approximativement dans <3>{{ inTimeFromNow }}</3>. Êtes-vous certain de vouloir verrouiller les actifs jusque là ?",
-  "out from": "depuis",
-  "passphraseWarningMessage": "<0>Ceci est une fonctionnalité avancée !</0><br />Utilisez la seulement si vous savez ce que vous faites.<br />Lisez notre <5>documentation</5> pour en apprendre plus.",
-  "sweepOperationFromTo": "Cette opération va envoyer tous les fonds de <1>{{ from }}</1> vers <3>{{ to }}</3>.",
-  "to": "vers",
-  "welcomeScreenOneAddressPerGroupMessage": "Utilisateur avancé : vous voulez commencer avec <1>une adresse par groupe pour le minage ou la DeFi?</1>",
-  "welcomeScreenPassphraseMessage": "Si vous désirez utiliser une <1>phrase de passe</1>, verrouillez votre portefeuille fraîchement créé.",
-  "with": "avec",
-  "{{ amount }} words entered": "{{ amount }} mots inscrits",
-  "{{ number }} selected": "{{ number }} sélectionnés",
-  "Contact deleted": "Contact effacé",
-  "Could not delete contact.": "Impossible d'effacer le contact.",
-  "Are you sure you want to remove \"{{ contactName }}\" from your contact list?": "Etes-vous sur de vouloir effacer \"{{ contactName }}\" de votre liste de contacts?",
-  "There are no addresses in the required group: {{ group }}": "Il n'y a pas d'adresses dans le groupe requis: {{ group }}",
-  "There are no available addresses.": "Il n'y a pas d'adresse disponible.",
-  "Please, generate a new address in group {{ group }} first.": "Merci de générer une nouvelle adresse dans le group {{ group }} d'abord.",
-  "System": "Système",
-  "Light": "Clair",
-  "Dark": "Sombre"
+  "Your CSV file has been generated successfully.": "Votre fichier CSV a été généré correctement.",
+  "Your CSV file is being compiled in the background.": "Votre fichier CSV est en cours de création.",
+  "Your Wallet": "Votre portefeuille"
 }
